# ipcamera-arm

./: CMakeLists.txt  README.md  camera-test.cpp  decodethread.cpp  decodethread.h  onvifpipe.cpp  onvifpipe.h
onvif/: CMakeLists.txt  RemoteDiscoveryBinding.nsmap  dom.c  duration.c  duration.h  mecevp.c  mecevp.h  onvif.h  onvif_comm.c  onvif_comm.h  onvif_dump.c  onvif_dump.h  smdevp.c  smdevp.h  soapClient.c  soapStub.h  stdsoap2.c  stdsoap2.h  threads.h  wsaapi.c  wsaapi.h  wsseapi.c  wsseapi.h
